--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
+    "lint": "yarn lint:js",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "start-storybook": "start-storybook -s ./src/assets -p 9001"
   },
   "dependencies": {
     "core-js": "^3.8.2",
@@ -17,12 +20,23 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/storybook": "^3.3.1",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-knobs": "^6.1.14",
+    "@storybook/addon-links": "^6.1.14",
+    "@storybook/vue": "^6.1.14",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.4.1",
-    "prettier": "^2.2.1"
+    "node-sass": "^5.0.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.1.1",
+    "sass-resources-loader": "^2.1.1"
   }
 }
