nodeとsassを再インストール

--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/storybook": "^3.3.1",
+    "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/style-resources": "^1.0.0",
-    "@storybook/addon-actions": "^6.1.14",
-    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-knobs": "^6.1.14",
-    "@storybook/addon-links": "^6.1.14",
-    "@storybook/vue": "^6.1.14",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/vue": "^6.5.9",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.4.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "4.14.1",
     "nuxt-sass-resources-loader": "^2.0.5",
     "prettier": "^2.2.1",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "10.2.0",
     "sass-resources-loader": "^2.1.1"
   }
 }
